--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Work Experience"
     url: /talks/    
 
-  - title: "Projects"
-    url: /publications/
+  # - title: "Projects"
+  #   url: /publications/
     
   # - title: "Services"
   #   url: /portfolio/
