--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /teaching/ 
 
   - title: "Work Experience"
-    url: /experience/    
+    url: /projects/    
 
   - title: "Projects"
     url: /publications/
