change publication url to projects

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /projects/    
 
   - title: "Projects"
-    url: /publications/
+    url: /projects/
     
   # - title: "Services"
   #   url: /portfolio/
