--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,5 @@ main:
   - title: "Skills and Services"
     url: /cv/
     
-  # - title: "Contact"
-  #   url: /markdown/
+  - title: "GHC'23"
+    url: /markdown/
