--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Work Experience"
     url: /experience/
 
-  - title: "GHC'23"
+  - title: "Other Reads"
     url: /markdown/
     
   # - title: "Services"
